--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -9,5 +9,16 @@
     "Hide": "Nascondere",
     "Examples": "Esempi",
     "Synonyms": "Sinonimi",
-    "Antonyms": "Contrari"
+    "Antonyms": "Contrari",
+    "addToBookmark": "Aggiungi ai preferiti",
+    "removeFromBookmark": "Rimuovi dai preferiti",
+    "PopularWord": "parole popolari",
+    "BookmarkedWord": "Parole selezionate",
+    "MoveToBookmarks": "Vai ai preferiti",
+    "HistoryRequests": "Cronologia delle ricerche",
+    "ClearHistory": "Cancella la cronologia",
+    "Bookmarks": "Preferiti",
+    "DeletedWords": "Parole cancellate",
+    "Delete": "Eliminare",
+    "Add": "Aggiungere"
 }
