--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "Search": "Search",
-    "Theme": "Change theme",
+    "Theme": "Change Theme",
     "Clear": "Clear",
     "Copy": "Copy",
     "Word": "Word",
@@ -10,15 +10,22 @@
     "Examples": "Examples",
     "Synonyms": "Synonyms",
     "Antonyms": "Antonyms",
-    "addToBookmark": "Add to Favorites",
-    "removeFromBookmark": "Remove from Favorites",
-    "PopularWord": "Popular words",
-    "BookmarkedWord": "Bookmarks",
+    "addToBookmark": "Add to Bookmarks",
+    "removeFromBookmark": "Remove from Bookmarks",
+    "PopularWord": "Favourite Word",
+    "BookmarkedWord": "Bookmarked Word",
     "MoveToBookmarks": "Move to Bookmarks",
-    "HistoryRequests": "Search History",
-    "ClearHistory": "Clear history",
+    "HistoryRequests": "History",
+    "ClearHistory": "Clear History",
     "Bookmarks": "Bookmarks",
-    "DeletedWords": "Deleted words",
+    "DeletedWords": "Deleted Words",
     "Delete": "Delete",
-    "Add": "Add"
+    "Add": "Add",
+    "Enter_word": "Enter a word",
+    "Form_name": "Name",
+    "Form_email": "Email",
+    "Form_message": "Message",
+    "Send": "Send",
+    "Back": "Back",
+    "Not_Found": "Page is not found"
 }
