--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,7 +27,9 @@
     "Form_message": "Сообщение",
     "Send": "Отправить",
     "Back": "Назад",
-    "Not_Found": "Страница не найдена"
+    "Not_Found": "Страница не найдена",
+    "MesssageOk": "Ваш email был успешно отправлен",
+    "MessageError":"Что-то пошло не так, пожалуйста, повторите позже"
 }
 
 
