--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -29,6 +29,6 @@
     "Back": "Back",
     "Not_Found": "Page is not found",
     "MesssageOk": "Message sent successfully",
-    "MessageError":"Something went wrong, please try again later"
-
+    "MessageError":"Something went wrong, please try again later",
+    "ErrorRequest": "The entered word is incorrect"
 }
