--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -29,5 +29,6 @@
     "Back": "戻る",
     "Not_Found": "ページが見つかりません",
     "MesssageOk": "メッセージは正常に送信されました",
-    "MessageError": "問題が発生しました。後でもう一度お試しください。"
+    "MessageError": "問題が発生しました。後でもう一度お試しください。",
+    "ErrorRequest": "入力した単語が間違っています"
 }
