--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -29,5 +29,6 @@
     "Back": "뒤쪽에",
     "Not_Found": "페이지를 찾을 수 없음",
     "MesssageOk": "메시지가 성공적으로 전송되었습니다",
-    "MessageError": "문제가 발생했습니다. 나중에 다시 시도하십시오."
+    "MessageError": "문제가 발생했습니다. 나중에 다시 시도하십시오.",
+    "ErrorRequest": "입력한 단어가 잘못되었습니다"
 }
