--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,7 +29,8 @@
     "Back": "Назад",
     "Not_Found": "Страница не найдена",
     "MesssageOk": "Ваш email был успешно отправлен",
-    "MessageError":"Что-то пошло не так, пожалуйста, повторите позже"
+    "MessageError":"Что-то пошло не так, пожалуйста, повторите позже",
+    "ErrorRequest": "Введенное слово является некорректным"
 }
 
 
